Get it working with Docker and Netty